--- a/src/assets/styles/components/molecules/CarruselCounter.css
+++ b/src/assets/styles/components/molecules/CarruselCounter.css
@@ -20,12 +20,20 @@
     display: flex;
     box-shadow: 0 0 10px rgba(255, 255, 255, 1);
     margin: 10px;
+    transition: transform 0.5s ease;
 }
 
 .counter span {
     margin-top: 20px;
     color: #F7D87D;
     font-size: 20px;
+}
+
+.counter.apper {
+    transform: scale(1.2);
+    text-shadow: 0 0 5px #F7D87D, 
+               0 0 10px #F7D87D, 
+               0 0 15px #F7D87D; 
 }
 
 .number {
