--- a/src/assets/styles/components/molecules/Modal.css
+++ b/src/assets/styles/components/molecules/Modal.css
@@ -1,5 +1,25 @@
+@keyframes spawn {
+  from {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes spawnBg {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .modal-overlay {
-    position: flex; /* Posición fija para que el modal se quede en la pantalla al hacer scroll */
+    position: fixed; /* Posición fija para que el modal se quede en la pantalla al hacer scroll */
     top: 0;          /* Alineado al inicio de la página */
     left: 0;         /* Alineado al borde izquierdo */
     width: 100%;     /* Cubrir todo el ancho de la pantalla */
@@ -9,6 +29,8 @@
     align-items: center;
     justify-content: center;
     z-index: 1000;   /* Valor alto para asegurarse de que se superpone a otros elementos */
+    animation: spawnBg 0.2s ease-out;
+    transition: all 0.3s ease;
 }
 
 .modal-content {
@@ -18,6 +40,8 @@
     position: relative;      /* Para que el botón de cierre esté relativo al contenido */
     z-index: 1001;           /* Mayor que el z-index de .modal-overlay para que el contenido esté encima */
     color: #3E2810;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: spawn 0.2s ease-out;
 }
 
 .modal-close-button {
@@ -32,4 +56,10 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    transition: all 0.3s ease;
+}
+
+.modal-close-button:hover {
+    transform: scale(1.7);
+    background-color: rgb(255, 255, 255, 0.7);
 }
