--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -2,6 +2,18 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #000;
+}
+
+@keyframes apper {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .quest-container {
@@ -13,7 +25,9 @@ body, html {
     display: flex;
     flex-direction: column;
     background-color: #000;
+    animation: apper 1s ease;
 }
+
 
 .ink-container,
 .draws-container {
@@ -31,9 +45,9 @@ body, html {
 
 .ink-container.apper {
     transform: scale(1.3);
-    text-shadow: 0 0 5px #F7D87D, 
-               0 0 10px #F7D87D, 
-               0 0 15px #F7D87D; 
+    text-shadow: 0 0 5px #C3B27F, 
+               0 0 10px #C3B27F, 
+               0 0 15px #C3B27F; 
 }
 
 .ink-container {
@@ -48,7 +62,7 @@ body, html {
 
 .ink,
 .draws {
-    background-color: #F7D87D;
+    background-color: #C3B27F;
     border: 5px solid #5B296E;
     width: 8vh;
     height: 8vh;
@@ -65,7 +79,7 @@ body, html {
     width: 30%;
     height: 40%;
     border: 4px solid #332A60;
-    color: #F7D87D;
+    color: #C3B27F;
     padding: 2px;
     align-items: center;
     justify-content: center;
@@ -85,7 +99,7 @@ body, html {
 .lore-text {
     font-size: 20px;
     font-family: Arial, sans-serif;
-    color: #F7D87D;
+    color: #C3B27F;
     text-shadow: 0 0 5px #000, 
                0 0 10px #000, 
                0 0 15px #000;  
@@ -136,13 +150,40 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
+.third-column {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
 .game-zone {
     width: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-zone {
+  overflow-x: scroll;
+  scrollbar-width: none; /* Firefox */
+}
+
+.game-zone::-webkit-scrollbar {
+  display: none; /* Chrome, Safari y Edge */
 }
 
 .game-zone .body-card {
     position: relative;
+}
+
+.modal-content {
+    width: 20%;
 }
