--- a/src/assets/styles/components/molecules/CarruselCounter.css
+++ b/src/assets/styles/components/molecules/CarruselCounter.css
@@ -12,8 +12,8 @@
     background-repeat: no-repeat;
     background-color: #C3B27F;
     border: 5px solid #5B296E;
-    width: 100px;
-    height: 100px;
+    width: 10vh;
+    height: 10vh;
     border-radius: 100%;
     justify-content: center;
     align-items: center;
