--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -3,6 +3,12 @@ body, html {
     padding: 0;
     height: 100%;
     background-color: #000;
+    overflow-x: scroll;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari y Edge */
 }
 
 @keyframes apper {
@@ -110,13 +116,14 @@ body, html {
     display: block;
     align-items: center;
     justify-content: center;
+    height: 15%;
 }
 
 .middle-zone,
 .game-zone {
     display: flex;
     width: 100%;
-    height: 40%;
+    height: 38%;
 }
 
 .first-column,
@@ -159,6 +166,11 @@ body, html {
                0 0 15px #C3B27F;
 }
 
+.end-turn-btn span {
+    margin: 10px;
+    width: 100%;
+}
+
 .third-column {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -191,10 +203,9 @@ body, html {
 
 .game-zone .body-card {
     position: relative;
-}
-
-.modal-content {
-    width: 20%;
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 }
 
 .overlay {
@@ -209,11 +220,44 @@ body, html {
 @keyframes apperPreview {
   from {
     transform: translate(-50%, -50%) scale(1);
+    height: 10%;
   }
   to {
-    transform: translate(-50%, -50%) scale(3);
+    transform: translate(-50%, -50%);
+    height: 80%;
   }
 }
+
+@keyframes rotateCard {
+  0% {
+    transform: translate(-50%, -50%) rotateZ(0deg) rotateY(0deg) rotateX(0deg);
+  }
+  12.5% {
+    transform: translate(-50%, -50%) rotateZ(2deg) rotateY(5deg) rotateX(5deg);
+  }
+  25% {
+    transform: translate(-50%, -50%) rotateZ(4deg) rotateY(10deg) rotateX(10deg);
+  }
+  37.5% {
+    transform: translate(-50%, -50%) rotateZ(2deg) rotateY(5deg) rotateX(5deg);
+  }
+  50% {
+    transform: translate(-50%, -50%) rotateZ(0deg) rotateY(0deg) rotateX(0deg);
+  }
+  62.5% {
+    transform: translate(-50%, -50%) rotateZ(-2deg) rotateY(-5deg) rotateX(-5deg);
+  }
+  75% {
+    transform: translate(-50%, -50%) rotateZ(-4deg) rotateY(-10deg) rotateX(-10deg);
+  }
+  87.5% {
+    transform: translate(-50%, -50%) rotateZ(-2deg) rotateY(-5deg) rotateX(-5deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotateZ(0deg) rotateY(0deg) rotateX(0deg);
+  }
+}
+
 
 .preview-card {
     position: fixed;
@@ -221,7 +265,15 @@ body, html {
     left: 50%;
     z-index: 9999;
     animation: apperPreview 0.5s ease;
-    transform: translate(-50%, -50%) scale(3);
+    transform: translate(-50%, -50%);
+    width: auto;
+    max-width: 2000px;
+    height: 80%;
+    aspect-ratio: 733 / 1024;
+    animation: rotateCard 4s infinite linear;
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 }
 
 .resolve-button {
