--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -209,12 +209,16 @@ body::-webkit-scrollbar {
 }
 
 .overlay {
-    width: 100%;
-    height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
-    position: absolute;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 
 @keyframes apperPreview {
@@ -258,7 +262,6 @@ body::-webkit-scrollbar {
   }
 }
 
-
 .preview-card {
     position: fixed;
     top: 50%;
@@ -270,10 +273,13 @@ body::-webkit-scrollbar {
     max-width: 2000px;
     height: 80%;
     aspect-ratio: 733 / 1024;
-    animation: rotateCard 4s infinite linear;
     -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+}
+
+.animated-preview {
+  animation: rotateCard 4s infinite linear;
 }
 
 .resolve-button {
@@ -291,5 +297,42 @@ body::-webkit-scrollbar {
 }
 
 .resolve-button span {
-    margin: 10px;
+  margin: 10px;
+}
+
+.duel-zone {
+  display-flex: flex;
+  position: fixed;
+  right: 10%;
+  z-index: 2;
+}
+
+.duel-zone button {
+  margin: 30px;
+  z-index: 3;
+}
+
+.duel-zone button span {
+  margin: 5px 10px;
+  min-width: 20vh;
+}
+
+.game-card {
+  margin: 2vh;
+  transition: all 0.5s ease;
+}
+
+@keyframes banishCard {
+  from {
+    transform: rotate(0deg) scale(1.5);
+  }
+  to {
+    transform: rotate(45deg) scale(1);
+  }
+}
+
+.banished-card {
+  transition: all 0s ease;
+  animation: banishCard 0.5s ease;
+  transform: rotate(45deg);
 }
