--- a/src/assets/styles/components/molecules/CarruselCounter.css
+++ b/src/assets/styles/components/molecules/CarruselCounter.css
@@ -75,6 +75,7 @@
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
     transition: all 0.5s ease;
     cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.4);
 }
 
 .right-arrow {
