--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -166,6 +166,11 @@ body::-webkit-scrollbar {
                0 0 15px #C3B27F;
 }
 
+
+.end-turn-btn {
+  animation: apper 1s ease-in-out;
+}
+
 .end-turn-btn span {
     margin: 10px;
     width: 100%;
@@ -335,4 +340,34 @@ body::-webkit-scrollbar {
   transition: all 0s ease;
   animation: banishCard 0.5s ease;
   transform: rotate(45deg);
+}
+
+.turn-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro y semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  transition: opacity 1s ease-in;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
+.turn-overlay-message {
+  color: #FFF;
+  font-size: 5rem;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0 0 10px #C3B27F, 
+               0 0 10px #C3B27F, 
+               0 0 15px #C3B27F;
+  animation: apper 1s ease-in-out;
+  font-family: Arial, sans-serif;
 }
