--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -213,6 +213,27 @@ body::-webkit-scrollbar {
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 }
 
+
+@keyframes apperPreview {
+  from {
+    transform: translate(-50%, -50%);
+    height: 10%;
+  }
+  to {
+    transform: translate(-50%, -50%);
+    height: 80%;
+  }
+}
+
+@keyframes apperOpacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .overlay {
     position: fixed;
     top: 0;
@@ -224,17 +245,7 @@ body::-webkit-scrollbar {
     justify-content: center;
     align-items: center;
     z-index: 1;
-}
-
-@keyframes apperPreview {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    height: 10%;
-  }
-  to {
-    transform: translate(-50%, -50%);
-    height: 80%;
-  }
+    animation: apperOpacity 0.5s ease-out;
 }
 
 @keyframes rotateCard {
@@ -272,7 +283,7 @@ body::-webkit-scrollbar {
     top: 50%;
     left: 50%;
     z-index: 2;
-    animation: apperPreview 0.5s ease;
+    animation: apperPreview 0.5s ease-in-out;
     transform: translate(-50%, -50%);
     width: auto;
     max-width: 2000px;
@@ -280,11 +291,11 @@ body::-webkit-scrollbar {
     aspect-ratio: 733 / 1024;
     -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 2px rgba(28, 28, 28, 0.75);
 }
 
 .animated-preview {
-  animation: rotateCard 4s infinite linear;
+  animation: apperPreview 0.5s ease-in-out, rotateCard 4s infinite linear;
 }
 
 .resolve-button {
@@ -306,7 +317,8 @@ body::-webkit-scrollbar {
 }
 
 .duel-zone {
-  display-flex: flex;
+  display: flex;
+  flex-direction: column;
   position: fixed;
   right: 10%;
   z-index: 2;
@@ -352,7 +364,7 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1;
   transition: opacity 1s ease-in;
 }
 
@@ -370,4 +382,30 @@ body::-webkit-scrollbar {
                0 0 15px #C3B27F;
   animation: apper 1s ease-in-out;
   font-family: Arial, sans-serif;
+}
+
+.discard-table {
+  background-color: #F7EACE;
+  width: 90%;
+  height: 90%;
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 2;
+}
+
+.discard-table-top {
+  display: flex;
+  border: solid 1px #C3B27F;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-around;
+  overflow-y: auto;
+  padding-top: 8px;
+}
+
+.discard-table-top .body-card {
+  position: relative;
 }
