--- a/src/assets/styles/pages/Quest.css
+++ b/src/assets/styles/pages/Quest.css
@@ -208,11 +208,20 @@ body::-webkit-scrollbar {
 
 .game-zone .body-card {
     position: relative;
-    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+    perspective: 1000px;
 }
 
+.shadowing-card {
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+}
+
+.glowing-card {
+  -webkit-box-shadow: 0px 0px 10px 8px rgba(112, 236, 253, 0.75);
+  -moz-box-shadow: 0px 0px 10px 8px rgba(112, 236, 253, 0.75);
+  box-shadow: 0px 0px 10px 8px rgba(112, 236, 253, 0.75);
+}
 
 @keyframes apperPreview {
   from {
